--- a/index.html
+++ b/index.html
@@ -119,75 +119,78 @@
 			<div class="tires">
 				<h2>Goodyear</h2>
 				<h3>Ultra Grip Extreme</h3>
-				<div>
+				<figure>
 					<img src="img/tire-1.png" alt="tire">
-				</div>
-				<span>90.00 <span>грн.</span></span>
+					<figcaption>90.00 <span>грн.</span></figcaption>
+				</figure>
 			</div>
 			<div class="tires">
 				<h2>Nokian</h2>
 				<h3>Hakkapeliitta R</h3>
-				<div>
+				<figure>
 					<img src="img/tire-2.png" alt="tire">
-				</div>
-				<span>115.00 <span>грн.</span></span>
+					<figcaption>115.00 <span>грн.</span></figcaption>
+				</figure>
 			</div><div class="tires">
 				<h2>Hankook</h2>
 				<h3>K 708 155/65 R14</h3>
-				<div>
+				<figure>
 					<img src="img/tire-3.png" alt="tire">
-				</div>
-				<span>393.00 <span>грн.</span></span>
+					<figcaption>393.00 <span>грн.</span></figcaption>
+				</figure>
 			</div>
 			<div class="tires">
 				<h2>Goodyear</h2>
 				<h3>Ultra Grip Extreme</h3>
-				<div>
+				<figure>
 					<img src="img/tire-1.png" alt="tire">
-				</div>
-				<span>90.00 <span>грн.</span></span>
+					<figcaption>90.00 <span>грн.</span></figcaption>
+				</figure>
 			</div>
 			<div class="tires">
 				<h2>Nokian</h2>
 				<h3>Hakkapeliitta R</h3>
-				<div>
+				<figure>
 					<img src="img/tire-2.png" alt="tire">
-				</div>
-				<span>115.00 <span>грн.</span></span>
-			</div><div class="tires">
+					<figcaption>115.00 <span>грн.</span></figcaption>
+				</figure>
+			</div>
+			<div class="tires">
 				<h2>Hankook</h2>
 				<h3>K 708 155/65 R14</h3>
-				<div>
+				<figure>
 					<img src="img/tire-3.png" alt="tire">
-				</div>
-				<span>393.00 <span>грн.</span></span>
+					<figcaption>393.00 <span>грн.</span></figcaption>
+				</figure>
 			</div>
 			<div class="tires">
 				<h2>Goodyear</h2>
 				<h3>Ultra Grip Extreme</h3>
-				<div>
+				<figure>
 					<img src="img/tire-1.png" alt="tire">
-				</div>
-				<span>90.00 <span>грн.</span></span>
+					<figcaption>90.00 <span>грн.</span></figcaption>
+				</figure>
 			</div>
 			<div class="tires">
 				<h2>Nokian</h2>
 				<h3>Hakkapeliitta R</h3>
-				<div>
+				<figure>
 					<img src="img/tire-2.png" alt="tire">
-				</div>
-				<span>115.00 <span>грн.</span></span>
-			</div><div class="tires">
+					<figcaption>115.00 <span>грн.</span></figcaption>
+				</figure>
+			</div>
+			<div class="tires">
 				<h2>Hankook</h2>
 				<h3>K 708 155/65 R14</h3>
-				<div>
+				<figure>
 					<img src="img/tire-3.png" alt="tire">
-				</div>
-				<span>393.00 <span>грн.</span></span>
+					<figcaption>393.00 <span>грн.</span></figcaption>
+				</figure>
 			</div>
 		</main>
-		<aside>
-			<ul class="brends">
+		<form action="#" name="brends">
+		<aside class="brends">
+			<ul>
 				<li>
 					<div class="circle">
 						<img src="img/catalog.png" alt="catalog">
@@ -201,9 +204,18 @@
 					<span>Шины</span>
 				</li>
 				<ul>
-					<li><a href="#">Бренд 1</a></li>
-					<li><a href="#">Бренд 2</a></li>
-					<li><a href="#">Бренд 3</a></li>
+					<li>
+						<input type="checkbox" name="brend" id="1">
+						<label for="1">Бренд 1</label>
+					</li>
+					<li>
+						<input type="checkbox" name="brend" id="2">
+						<label for="2">Бренд 2</label>
+					</li>
+					<li>
+						<input type="checkbox" name="brend" id="3">
+						<label for="3">Бренд 3</label>
+					</li>
 				</ul>
 				
 				<li>
@@ -213,23 +225,26 @@
 					<span>Диски</span>
 				</li>
 				<ul>
-					<li><a href="#">Бренд 1</a></li>
-					<li><a href="#">Бренд 2</a></li>
-					<li><a href="#">Бренд 3</a></li>
+					<li>
+						<input type="checkbox" name="brend" id="4">
+						<label for="4">Бренд 1</label>
+					</li>
+					<li>
+						<input type="checkbox" name="brend" id="5">
+						<label for="5">Бренд 2</label>
+					</li>
+					<li>
+						<input type="checkbox" name="brend" id="6">
+						<label for="6">Бренд 3</label>
+					</li>
 				</ul>
-				<li>Выбрать</li>
+				<li><a href="#" onClick="brends.submit()">Выбрать</a></li>
 			</ul>
 		</aside>
+		</form>
 	</div>
 	<div class="brandlogo">
-		<img src="img/brand-1.png" alt="brand">
-		<img src="img/brand-2.png" alt="brand">
-		<img src="img/brand-3.png" alt="brand">
-		<img src="img/brand-4.png" alt="brand">
-		<img src="img/brand-5.png" alt="brand">
-		<img src="img/brand-6.png" alt="brand">
-		<img src="img/brand-7.png" alt="brand">
-		<img src="img/brand-8.png" alt="brand">
+		<img src="img/brand-logo.jpg" alt="brand">
 	</div>
 	<footer>
 		<ul>
