--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 						<input type="password" placeholder="пароль">					
 					</li>
 					<li>
-						<a href="#" onClick="form.submit()">вход</a>				
+						<input type="submit" value="вход">				
 					</li>
 					<li>
 						<a href="#">регистрация</a>
 					</li>
 					<li>
-						<a href="#">забыли пароль?</a>
+						<a href="#"><span>забыли пароль?</span></a>
 					</li>
 				</ul>
 			</form>
@@ -57,8 +57,8 @@
 			<li><a href="#">Статьи</a></li>
 			<li><a href="#">Контакты</a></li>
 			<li>
-				<span>товаров: <span class="kol">0</span></span>
-				<span>на сумму: <span class="summ">0,00 грн.</span></span>
+				<span>товаров:<span class="kol">0</span></span>
+				<span>на сумму:<span class="summ">0,00 грн.</span></span>
 			</li>
 		</ul>
 	</nav>
@@ -81,38 +81,38 @@
 						<div></div>
 					</div>
 					<span>Шины</span>
-				</li>
 				<ul>
 					<li><a href="#">Наименование 1</a></li>
 					<li><a href="#">Наименование 2</a></li>
 					<li><a href="#">Наименование 3</a></li>
 					<li><a href="#">Наименование 4</a></li>
 				</ul>
+				</li>
 				
 				<li>
 					<div class="circle hole">
 						<div></div>
 					</div>
 					<span>Диски</span>
-				</li>
 				<ul>
 					<li><a href="#">Наименование 1</a></li>
 					<li><a href="#">Наименование 2</a></li>
 					<li><a href="#">Наименование 3</a></li>
 					<li><a href="#">Наименование 4</a></li>
 				</ul>
+				</li>
 				<li>
 					<div class="circle hole">
 						<div></div>
 					</div>
 					<span>Болты</span>
-				</li>
 				<ul>
 					<li><a href="#">Наименование 1</a></li>
 					<li><a href="#">Наименование 2</a></li>
 					<li><a href="#">Наименование 3</a></li>
 					<li><a href="#">Наименование 4</a></li>
 				</ul>
+				</li>
 			</ul>
 		</aside>
 		<main>
@@ -202,7 +202,6 @@
 						<div></div>
 					</div>
 					<span>Шины</span>
-				</li>
 				<ul>
 					<li>
 						<input type="checkbox" name="brend" id="1">
@@ -217,13 +216,13 @@
 						<label for="3">Бренд 3</label>
 					</li>
 				</ul>
+				</li>
 				
 				<li>
 					<div class="circle hole">
 						<div></div>
 					</div>
 					<span>Диски</span>
-				</li>
 				<ul>
 					<li>
 						<input type="checkbox" name="brend" id="4">
@@ -238,13 +237,39 @@
 						<label for="6">Бренд 3</label>
 					</li>
 				</ul>
-				<li><a href="#" onClick="brends.submit()">Выбрать</a></li>
+				</li>
+				<li><input type="submit" value="Выбрать"></li>
 			</ul>
 		</aside>
 		</form>
 	</div>
 	<div class="brandlogo">
-		<img src="img/brand-logo.jpg" alt="brand">
+		<ul>
+			<li>
+				<a href="#"><img src="img/brand-1.png" alt="brand"></a>
+			</li>
+			<li>
+				<a href="#"><img src="img/brand-2.png" alt="brand"></a>
+			</li>
+			<li>
+				<a href="#"><img src="img/brand-7.png" alt="brand"></a>
+			</li>
+			<li>
+				<a href="#"><img src="img/brand-5.png" alt="brand"></a>
+			</li>
+			<li>
+				<a href="#"><img src="img/brand-4.png" alt="brand"></a>
+			</li>
+			<li>
+				<a href="#"><img src="img/brand-3.png" alt="brand"></a>
+			</li>
+			<li>
+				<a href="#"><img src="img/brand-6.png" alt="brand"></a>
+			</li>
+			<li>
+				<a href="#"><img src="img/brand-8.png" alt="brand"></a>
+			</li>
+		</ul>
 	</div>
 	<footer>
 		<ul>
